name:                gore-and-ash-sdl
version:             3.0.0.0
synopsis:            Gore&Ash core module for integration with SDL library
description:         Please see README.md
homepage:            git@github.com:Teaspot-Studio/gore-and-ash-sdl.git
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha
maintainer:          ncrashed@gmail.com
copyright:           2016 Anton Gushcha
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  README.md
  CHANGELOG.md
  stack.yaml

library
  hs-source-dirs:      src
  exposed-modules:
    Game.GoreAndAsh.SDL
    Game.GoreAndAsh.SDL.API
    Game.GoreAndAsh.SDL.Module
    Game.GoreAndAsh.SDL.State

  default-language:    Haskell2010
  build-depends:
      base                  >= 4.7      && < 5
    , containers            >= 0.5.6.2  && < 0.6
    , deepseq               >= 1.4.1.1  && < 1.5
    , exceptions            >= 0.8.0.2  && < 0.9
    , gore-and-ash          >= 2.0      && < 2.1
    , gore-and-ash-logging  >= 3.0      && < 3.1
    , lens                  >= 4.13     && < 4.15
    , linear                >= 1.20.3   && < 1.21
    , mtl                   >= 2.2.1    && < 2.3
    , resourcet             >= 1.1.7.1  && < 1.2
    , sdl2                  >= 2.1.1    && < 2.2
    , text                  >= 1.2.2.0  && < 1.3
    , transformers          >= 0.4.2.0  && < 0.6
    , transformers-base     >= 0.4.4    && < 0.6
    , unordered-containers  >= 0.2.5.1  && < 0.3

  default-extensions:
    BangPatterns
    DeriveGeneric
    FlexibleInstances
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TypeFamilies
    UndecidableInstances
