name:                gore-and-ash-sdl
version:             3.0.0.0
synopsis:            Gore&Ash core module for integration with SDL library
description:         Please see README.md
homepage:            git@github.com:Teaspot-Studio/gore-and-ash-sdl.git
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha
maintainer:          ncrashed@gmail.com
copyright:           2016 Anton Gushcha
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  README.md
  CHANGELOG.md
  stack.yaml

flag examples
  description: Enable building of examples
  default:     False

library
  hs-source-dirs:      src
  exposed-modules:
    Game.GoreAndAsh.SDL
    Game.GoreAndAsh.SDL.API
    Game.GoreAndAsh.SDL.Module
    Game.GoreAndAsh.SDL.State
    Game.GoreAndAsh.SDL.Window

  default-language:    Haskell2010
  build-depends:
      base                  >= 4.7      && < 5
    , deepseq               >= 1.4.1.1  && < 1.5
    , exceptions            >= 0.8.0.2  && < 0.9
    , extra                 >= 1.4      && < 1.5
    , gore-and-ash          >= 2.0      && < 2.1
    , gore-and-ash-logging  >= 3.0      && < 3.1
    , lens                  >= 4.13     && < 4.15
    , linear                >= 1.20.3   && < 1.21
    , mtl                   >= 2.2.1    && < 2.3
    , resourcet             >= 1.1.7.1  && < 1.2
    , sdl2                  >= 2.1.1    && < 2.2
    , text                  >= 1.2.2.0  && < 1.3
    , transformers          >= 0.4.2.0  && < 0.6
    , transformers-base     >= 0.4.4    && < 0.6
    , vector                >= 0.11     && < 0.12

  default-extensions:
    BangPatterns
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    OverloadedStrings
    RecordWildCards
    RecursiveDo
    ScopedTypeVariables
    TypeFamilies
    UndecidableInstances

executable gore-and-ash-sdl-example01
  if flag(examples)
    buildable: True
  else
    buildable: False

  hs-source-dirs:     examples
  main-is:            Example01.hs
  default-language:   Haskell2010
  build-depends:
      base                  >= 4.7      && < 5
    , exceptions            >= 0.8      && < 0.9
    , gore-and-ash          >= 2.0      && < 2.1
    , gore-and-ash-logging  >= 3.0      && < 3.1
    , gore-and-ash-sdl
    , lens                  >= 4.14     && < 4.15
    , mtl                   >= 2.2      && < 2.3
    , sdl2                  >= 2.1.1    && < 2.2

  default-extensions:
    BangPatterns
    DeriveFunctor
    DeriveGeneric
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    OverloadedStrings
    RecordWildCards
    RecursiveDo
    ScopedTypeVariables
    StandaloneDeriving
    TypeFamilies
    UndecidableInstances

  ghc-options: -threaded